fix for footer spacing

--- a/scss/_social.scss
+++ b/scss/_social.scss
@@ -2,6 +2,7 @@
 
 .social {
 	text-align: center;
+	padding: 1vh 0 3vh;
 	&__icon {
 		display: inline-block;
 		width: 9vw;
